--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ui-kitten/eva-icons": "^5.1.1",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "lottie-react-native": "4.0.2",
     "prettier": "^2.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
