--- a/package.json
+++ b/package.json
@@ -9,37 +9,37 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
-    "@react-native-community/datetimepicker": "3.5.2",
-    "@react-navigation/bottom-tabs": "^6.0.5",
-    "@react-navigation/native": "^6.0.2",
-    "@react-navigation/stack": "^6.0.7",
-    "@reduxjs/toolkit": "^1.6.1",
-    "@types/react-native-vector-icons": "^6.4.8",
+    "@react-native-community/datetimepicker": "4.0.0",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
+    "@reduxjs/toolkit": "^1.7.1",
+    "@types/react-native-vector-icons": "^6.4.10",
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
-    "expo": "~42.0.1",
-    "expo-status-bar": "~1.0.4",
-    "lottie-react-native": "4.0.2",
-    "prettier": "^2.4.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
+    "expo": "^44.0.0",
+    "expo-notifications": "~0.14.0",
+    "expo-status-bar": "~1.2.0",
+    "lottie-react-native": "5.0.1",
+    "prettier": "^2.5.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.5",
-    "redux": "^4.1.1",
-    "redux-persist": "^6.0.0",
-    "expo-notifications": "~0.12.3"
+    "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
