--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true,
+      "supportsTablet": false,
       "bundleIdentifier": "com.iamklim.habit-chip.ios"
     },
     "android": {
