--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "@reduxjs/toolkit": "^1.7.1",
-    "@types/react-native-vector-icons": "^6.4.10",
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
     "expo": "^44.0.0",
+    "expo-firebase-analytics": "~6.0.0",
     "expo-notifications": "~0.14.0",
+    "expo-secure-store": "~11.1.0",
     "expo-status-bar": "~1.2.0",
     "lottie-react-native": "5.0.1",
     "prettier": "^2.5.1",
@@ -34,12 +35,15 @@
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
-    "expo-firebase-analytics": "~6.0.0"
+    "uuid": "^8.3.2",
+    "react-native-get-random-values": "~1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-native-vector-icons": "^6.4.10",
+    "@types/uuid": "^8.3.4",
     "typescript": "~4.3.5"
   },
   "private": true
